--- a/lib/client/app/index.html
+++ b/lib/client/app/index.html
@@ -39,6 +39,8 @@
         <link rel="stylesheet" type="text/css" href="stylesheets/containers.css">
         <!-- Stylesheets -->
 
+        <script src='https://www.google.com/recaptcha/api.js'></script>
+
 
 	</head>
 
